codex-rs/tui/src/snapshots/codex_tui__review_story_overlay__tests__compact_cockpit_snapshot_hides_steps_rail.snap
---
source: tui/src/review_story_overlay.rs
expression: "render(&mut overlay, 68, 22)"
---
"┌ REVIEW STORY ────────────────────────────────────────────────────┐"
"│Introduce review story navigation                                 │"
"│base: main...HEAD  2 files  ready  1/2                            │"
"│┌ DETAILS - Define the artifact ─────────────────────────────────┐│"
"││GOAL                                                            ││"
"││Expose a reusable snapshot contract.                            ││"
"││                                                                ││"
"││WHAT                                                            ││"
"││Adds the v2 request and response types.                         ││"
"│└────────────────────────────────────────────────────────────────┘│"
"│┌ DIFF - file 1/1 ───────────────────────────────────────────────┐│"
"││app-server-protocol/src/review_story.rs  added                  ││"
"││Adds shared story payloads.                                     ││"
"││1  pub struct Thread;                                           ││"
"││2 +pub struct Story;                                            ││"
"││                                                                ││"
"││                                                                ││"
"││                                                                ││"
"││                                                                ││"
"│└────────────────────────────────────────────────────────────────┘│"
"│ DETAILS  n/p step  ↑/↓ scroll  tab pane  t contents  q close     │"
"└──────────────────────────────────────────────────────────────────┘"
