codex-rs/tui/src/snapshots/codex_tui__review_story_overlay__tests__full_cockpit_snapshot.snap
---
source: tui/src/review_story_overlay.rs
expression: "render(&mut overlay, 116, 30)"
---
"┌ REVIEW STORY ────────────────────────────────────────────────────────────────────────────────────────────────────┐"
"│Introduce review story navigation                                                                                 │"
"│base: main...HEAD  2 files  ready  1/2                                                                            │"
"│┌ STEPS ───────────────────┐┌ DETAILS - Define the artifact ─────────────────────────────────────────────────────┐│"
"││> 1 Define the artifact   ││GOAL                                                                                ││"
"││. 2 Navigate the story    ││Expose a reusable snapshot contract.                                                ││"
"││                          ││                                                                                    ││"
"││                          ││WHAT                                                                                ││"
"││                          ││Adds the v2 request and response types.                                             ││"
"││                          ││                                                                                    ││"
"││                          ││WHY HERE                                                                            ││"
"││                          ││The interface precedes any presentation layer.                                      ││"
"││                          ││                                                                                    ││"
"││                          │└────────────────────────────────────────────────────────────────────────────────────┘│"
"││                          │┌ DIFF - file 1/1 ───────────────────────────────────────────────────────────────────┐│"
"││                          ││app-server-protocol/src/review_story.rs  added                                      ││"
"││                          ││Adds shared story payloads.                                                         ││"
"││                          ││1  pub struct Thread;                                                               ││"
"││                          ││2 +pub struct Story;                                                                ││"
"││                          ││                                                                                    ││"
"││                          ││                                                                                    ││"
"││                          ││                                                                                    ││"
"││                          ││                                                                                    ││"
"││                          ││                                                                                    ││"
"││                          ││                                                                                    ││"
"││                          ││                                                                                    ││"
"││                          ││                                                                                    ││"
"│└──────────────────────────┘└────────────────────────────────────────────────────────────────────────────────────┘│"
"│ STEPS  n/p step  ↑/↓ scroll  tab pane  [/] file  o overview  ? help  q close                                     │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘"
