codex-rs/tui/src/snapshots/codex_tui__review_story_overlay__tests__overview_subview_snapshot.snap
---
source: tui/src/review_story_overlay.rs
expression: "render(&mut overlay, 116, 30)"
---
"┌ REVIEW STORY ────────────────────────────────────────────────────────────────────────────────────────────────────┐"
"│Introduce review story navigation                                                                                 │"
"│base: main...HEAD  2 files  ready  1/2                                                                            │"
"│┌ STEPS ───────────────────┐┌ DETAILS - Define the artifact ─────────────────────────────────────────────────────┐│"
"││> 1 Define the artifact   ││GOAL                                                                                ││"
"││. 2 Navigate t┌ OVERVIEW ────────────────────────────────────────────────────────────────────────┐              ││"
"││              │Introduce review story navigation                                                 │              ││"
"││              │                                                                                  │              ││"
"││              │OVERVIEW                                                                          │              ││"
"││              │A stored narrative orders the API and terminal changes for review.                │              ││"
"││              │                                                                                  │              ││"
"││              │                                                                                  │              ││"
"││              │Source: base: main...HEAD                                                         │              ││"
"││              │Files: 2  Steps: 2                                                                │──────────────┘│"
"││              │Fingerprint: source-1234                                                          │──────────────┐│"
"││              │                                                                                  │              ││"
"││              │                                                                                  │              ││"
"││              │                                                                                  │              ││"
"││              │                                                                                  │              ││"
"││              │                                                                                  │              ││"
"││              │                                                                                  │              ││"
"││              │                                                                                  │              ││"
"││              │                                                                                  │              ││"
"││              │                                                                                  │              ││"
"││              │                                                                                  │              ││"
"││              └──────────────────────────────────────────────────────────────────────────────────┘              ││"
"││                          ││                                                                                    ││"
"│└──────────────────────────┘└────────────────────────────────────────────────────────────────────────────────────┘│"
"│ STEPS  n/p step  ↑/↓ scroll  tab pane  [/] file  o overview  ? help  q close                                     │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘"
